# simulate

./: .gitignore  CMakeLists.txt  README.md
armalogp/: arma.extensions.hpp  arma.logp.hpp  arma.math.hpp
src/: armaext.hpp  armalogp.h  matplotlibcpp.h  simulate.cpp
